[gd_scene load_steps=14 format=3 uid="uid://dumqyv05watte"]

[ext_resource type="Script" path="res://dice/dice.gd" id="1_so3cc"]
[ext_resource type="PackedScene" uid="uid://ckv3marudby42" path="res://powers/fire.tscn" id="2_7xr16"]
[ext_resource type="PackedScene" uid="uid://8e00oxt076xk" path="res://powers/ice.tscn" id="3_vhilq"]
[ext_resource type="PackedScene" uid="uid://du5aqdlghke74" path="res://powers/rock.tscn" id="4_gbae3"]
[ext_resource type="PackedScene" uid="uid://dvi12bx5tt4os" path="res://powers/bolt.tscn" id="5_cdb5r"]
[ext_resource type="PackedScene" uid="uid://cfgxeoe0tqp8m" path="res://powers/plant.tscn" id="5_m7vtx"]
[ext_resource type="Texture2D" uid="uid://cph46ads3un8s" path="res://dice/bolt.png" id="6_g0xlq"]
[ext_resource type="PackedScene" uid="uid://c0bogmxvcmjnw" path="res://powers/air.tscn" id="7_tneug"]
[ext_resource type="AudioStream" uid="uid://k41appmbn7ag" path="res://dice/hit.wav" id="9_ob36e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t352r"]
size = Vector2(10, 10)

[sub_resource type="Animation" id="Animation_olxl8"]
resource_name = "break"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.2, 0.2, 0.2, 1), Color(1, 1, 1, 1), Color(0.2, 0.2, 0.2, 1), Color(1, 1, 1, 1), Color(0.2, 0.2, 0.2, 1)]
}

[sub_resource type="Animation" id="Animation_2oj7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Top:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ds4f"]
_data = {
"RESET": SubResource("Animation_2oj7n"),
"break": SubResource("Animation_olxl8")
}

[node name="Dice" type="Node2D"]
script = ExtResource("1_so3cc")
FireScn = ExtResource("2_7xr16")
IceScn = ExtResource("3_vhilq")
RockScn = ExtResource("4_gbae3")
PlantScn = ExtResource("5_m7vtx")
BoltScn = ExtResource("5_cdb5r")
AirScn = ExtResource("7_tneug")

[node name="Secondary" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("6_g0xlq")

[node name="Top" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("6_g0xlq")

[node name="Area2D" type="Area2D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_t352r")

[node name="ProjectedMoves" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
z_index = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Left" type="Sprite2D" parent="ProjectedMoves"]
position = Vector2(-32, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_g0xlq")

[node name="Right" type="Sprite2D" parent="ProjectedMoves"]
position = Vector2(32, 0)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_g0xlq")

[node name="Up" type="Sprite2D" parent="ProjectedMoves"]
position = Vector2(0, -32)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_g0xlq")

[node name="Down" type="Sprite2D" parent="ProjectedMoves"]
position = Vector2(0, 32)
scale = Vector2(0.1, 0.1)
texture = ExtResource("6_g0xlq")

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2(1.2, 1.2)
limit_left = 0
limit_top = 0
limit_right = 958
limit_bottom = 718
smoothing_enabled = true

[node name="MovTimer" type="Timer" parent="."]
one_shot = true

[node name="ProjTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7ds4f")
}

[node name="DamageSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_ob36e")

[connection signal="timeout" from="ProjTimer" to="." method="_on_proj_timer_timeout"]
